add news rout
