# routes/news.js
@@ -1,5 +1,6 @@
 const router = require('express').Router();
+const { getAllNews } = require('../controllers/NewsController');
 
-router.get('/news');
+router.get('/', getAllNews);
 
 module.exports = router;
